// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<form
  onSubmit={[Function]}
/>
`;

exports[`renders correctly with children 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    type="text"
  />
</form>
`;
